# G4_MC_CHANNELING

./: CMakeLists.txt  README.md  channeling.cc
MPI/: CMakeLists.txt  channeling.cc
MPI/include/: G4MPI_USE.hh
channeling/include/: G4Channeling.hh  G4ChannelingBOptnChangeCrossSection.hh  G4ChannelingMaterialData.hh  G4ChannelingOptrMultiParticleChangeCrossSection.hh  G4ChannelingTrackData.hh  G4EmStandardPhysicsSS_Channeling.hh  G4EmStandardPhysics_option4_channeling.hh
channeling/src/: G4Channeling.cc  G4ChannelingBOptnChangeCrossSection.cc  G4ChannelingECHARM.cc  G4ChannelingMaterialData.cc  G4ChannelingOptrMultiParticleChangeCrossSection.cc  G4ChannelingTrackData.cc  G4EmStandardPhysicsSS_Channeling.cc  G4EmStandardPhysics_option4_channeling.cc
data/: C110ax_atd.txt  C110ax_efx.txt  C110ax_efy.txt  C110ax_eld.txt  C110ax_pot.txt  C220pl_atd.txt  C220pl_efx.txt  C220pl_efy.txt  C220pl_eld.txt  C220pl_pot.txt  Ge011ax_atd.txt  Ge011ax_efx.txt  Ge011ax_efy.txt  Ge011ax_eld.txt  Ge011ax_pot.txt  Ge111ax_atd.txt  Ge111ax_efx.txt  Ge111ax_efy.txt  Ge111ax_eld.txt  Ge111ax_pot.txt  Ge111pl_atd.txt  Ge111pl_efx.txt  Ge111pl_efy.txt  Ge111pl_eld.txt  Ge111pl_pot.txt  Ge220pl_atd.txt  Ge220pl_efx.txt  Ge220pl_efy.txt  Ge220pl_eld.txt  Ge220pl_pot.txt  Ge400pl_atd.txt  Ge400pl_efx.txt  Ge400pl_efy.txt  Ge400pl_eld.txt  Ge400pl_pot.txt  Si001ax_atd.txt  Si001ax_efx.txt  Si001ax_efy.txt  Si001ax_eld.txt  Si001ax_pot.txt  (+30 more)
include/: Analysis.hh  CrystalDetector.hh  CrystalDetectorHit.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  EventAction.hh  G4EmStandardPhysicsSS_channeling.hh  RunAction.hh  SensitiveDetectorHit.hh
include/mpi_use/: G4MPI_USE.hh
mac/: CMakeLists.txt  E212_QuasiChanneling.mac  E212_e+.mac  E212_e-.mac  E761_sigma+.mac  H8_PL01.mac  H8_PL02.mac  H8_PL02b.mac  H8_PL03.mac  LHC_lambda_c+.mac  LHC_xi-.mac  LHC_xi-_axial.mac  MAMI_Si.mac  PL02b_R.txt  PL02b_R_lr.txt  PL03_R.txt  PL03_R_lr.txt  W111.mac
python/: analysis.ipynb
python/.ipynb_checkpoints/: analysis-checkpoint.ipynb
python/expdata/: e212_electrons.txt  e212_positrons.txt
src/: CrystalDetector.cc  CrystalDetectorHit.cc  DetectorConstruction.cc  DetectorConstructionMessenger.cc  EventAction.cc  G4Channeling.cc  G4ChannelingPhysics.cc  G4EmStandardPhysicsSS_channeling.cc  PhysicsList.cc  RunAction.cc  SensitiveDetector.cc  UserActionInitialization.cc
